manifests/ops-agent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ops-agent
  namespace: application
  labels:
    app.kubernetes.io/name: ops-agent
spec:
  selector:
    app.kubernetes.io/name: ops-agent
  ports:
    - name: http
      port: 4000
      protocol: TCP
      targetPort: http
