manifests/ops-agent/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ops-agent
  labels:
    app: ops-agent
spec:
  selector:
    app: ops-agent
  ports:
    - port: 443
      targetPort: 4180
      name: https
    - port: 80
      targetPort: 4180
      name: http
  type: ClusterIP
