manifests/ops-agent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ops-agent
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ops.agent.72602.online
      secretName: ops-agent-tls
  rules:
    - host: ops.agent.72602.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ops-agent
                port:
                  number: 443
